# mcp-tool-servers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: deploy.yml  prefetch-reports.yml
scripts/: prefetch_reports.py  run_all.py
servers/: finance_data.py  github_tools.py  vector_db_server.py  web_search.py
shared/: config.py  vector_db.py
